--- a/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/create_group.sh.j2
+++ b/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/create_group.sh.j2
@@ -6,10 +6,11 @@ export JAVA_HOME=$ORACLE_HOME/jdk/jre
 
 APPLICATION={{ ec2.tags['application'] }}
 
-if [[ {{ emcli }} get_groups -noheader -script | cut -f1 | grep -E "^${APPLICATION}$" ]]; then
+if [[ $( {{ emcli }} get_groups -noheader -script | cut -f1 | grep -Ec "^${APPLICATION}$" ) -gt 0 ]]; then
    echo "${APPLICATION} group already exists."
 else
-   {{ emcli }}  create_dynamic_group -name="${APPLICATION}" -properties="orcl_gtp_line_of_bus:${APPLICATION}"
-   if [[ $? -eq 0]]; then
-      echo "New ${APPLICATION} dynamic group created." 
+   {{ emcli }} create_dynamic_group -name="${APPLICATION}" -properties="orcl_gtp_line_of_bus:${APPLICATION}"
+   if [[ $? -eq 0 ]]; then
+      echo "New ${APPLICATION} dynamic group created."
+   fi
 fi
