--- a/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/emcli_login.sh.j2
+++ b/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/emcli_login.sh.j2
@@ -7,10 +7,11 @@ export JAVA_HOME=$ORACLE_HOME/jdk/jre
 # and only if this fails attempt to create a new session.
 {{ emcli }} sync
 if [[ $? -gt 0 ]]; then
-   echo "{{ oem_sysman_password }}" | {{ emcli }} login
+   echo "{{ oem_sysman_password }}" | {{ emcli }} login -username=sysman
    RC=$?
    if [[ $RC -gt 0 ]]; then
       exit $RC
    fi
    {{ emcli }} sync
+   echo "Logged in."
 fi
