--- a/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/import_incident_rule_set.sh.j2
+++ b/playbooks/delius_oem_rules_setup/delius_oem_rules_setup/templates/import_incident_rule_set.sh.j2
@@ -1,24 +1,27 @@
 #!/bin/bash
 
+set -x
+
 . ~/.bash_profile
 
 export JAVA_HOME=$ORACLE_HOME/jdk/jre
 
-RULE_SET_NAME="Rule set for {{ ec2.tags['application'] }}"
+RULE_SET_BASE_NAME="Rule set for {{ ec2.tags['application'] }}"
 
-{{ emcli }} import_incident_rule_set -import_file={{ stage }}/rule_set.xml  -alt_rule_set_name="${RULE_SET_NAME}"
+{{ emcli }} import_incident_rule_set -import_file={{ stage }}/rule_set.xml  -alt_rule_set_name="${RULE_SET_BASE_NAME}"
 RC=$?
-[[ $RC -eq 2 && "{{ replace_existing_rule_set | default('false')}}" == 'false']] && exit 2
+[[ $RC -eq 2 ]] && [[ '{{ replace_existing_rule_set | default('false')}}' == 'false' ]] && exit 2
 if [[ $RC -eq 2 ]]; then  
   # The rule set already exists.  As of 13c Oracle do not provide EMCLI functionality
   # to delete the rule set, so we instead disable the existing rule set and create
   # a new one
   RULE_SET_CREATE_FLAG=1
+  RULE_SET_NAME=${RULE_SET_BASE_NAME}
   while [[ RULE_SET_CREATE_FLAG -ne 0 ]]; do
      {{ emcli }} modify_incident_rule -action=disable -type=ruleset -rule_set_name="${RULE_SET_NAME}"
      VERSION_NUMBER=${RULE_SET_NAME##*[^0-9]}
      NEXT_VERSION=$((VERSION_NUMBER+1))
-     RULE_SET_NAME="${RULE_SET_NAME} VERSION ${NEXT_VERSION}"
+     RULE_SET_NAME="${RULE_SET_BASE_NAME} VERSION ${NEXT_VERSION}"
      {{ emcli }} import_incident_rule_set -import_file={{ stage }}/rule_set.xml  -alt_rule_set_name="${RULE_SET_NAME}"
      RC=$?
      # We loop again if the version already exists; exit the loop for any other return codes
